--- a/src/Services/Catalogue/Catalogue.API/appsettings.Development.json
+++ b/src/Services/Catalogue/Catalogue.API/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://catalogueDb:27017",
+    "DatabaseName": "ProductDb",
+    "CollectionName": "Products"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
