--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -8,6 +8,13 @@ services:
     - "27017:27017"
     volumes:
     - mongo_data/data/db
+
+  basketDb:
+    container_name: basketDb
+    restart: always
+    ports:
+    - "6379:6379"
+    
   
   catalogue.api:
     container_name: Catalogue.API
@@ -17,7 +24,16 @@ services:
       - "DatabaseSettings:ConnectionString=mongodb://catalogueDb:27017"
     depends_on:
       - catalogueDb
-
-
     ports:
       - "8000:80"
+  
+  basket.api:
+    container_name: Basket.API
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings:ConnectionString=basketDb:6379"
+    depends_on:
+      - basketDb
+    ports:
+      - "8001:80"
+
