--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -3,11 +3,20 @@ version: '3.4'
 services:
   catalogueDb:
     image: mongo
+  basketDb:
+    image: redis:alpine
   catalogue.api:
     image: ${DOCKER_REGISTRY-}catalogueapi
     build:
       context: .
       dockerfile: Services/Catalogue/Catalogue.API/Dockerfile
 
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: Services/Basket/Basket.API/Dockerfile
+
 volumes:
   mongo_data:
+
