--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     image: mongo
   basketDb:
     image: redis:alpine
+  portainer:
+    image: portainer/portainer-ce
+  
   catalogue.api:
     image: ${DOCKER_REGISTRY-}catalogueapi
     build:
@@ -19,4 +22,5 @@ services:
 
 volumes:
   mongo_data:
+  portainer_data:
 
