--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -14,6 +14,30 @@ services:
     restart: always
     ports:
     - "6379:6379"
+
+  discountDb:
+    container_name: discountDb
+    environment:
+     - POSTGRES_USER=admin
+     - POSTGRES_PASSWORD=admin12345
+     - POSTGRES_DB = DiscountDb
+    restart: always
+    ports:
+     - "5432:5432"
+    volumes:
+     - postgres_data:/var/lib/postgresql/data/
+
+  pgadmin:
+    container_name: pgadmin
+    environment:
+     - PGADMIN_DEFAULT_EMAIL=admin@micoservices.com
+     - PGADMIN_DEFAULT_PASSWORD=admin12345
+    restart: always
+    ports:
+     - "5050:80"
+    volumes:
+     - pgadmin_data:/root/.pgadmin
+
   portainer:
     container_name: portainer
     restart: always
