--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,6 +5,10 @@ services:
     image: mongo
   basketDb:
     image: redis:alpine
+  discountDb:
+    image: postgres
+  pgadmin:
+    image: dpage/pgadmin
   portainer:
     image: portainer/portainer-ce
   
@@ -23,4 +27,6 @@ services:
 volumes:
   mongo_data:
   portainer_data:
+  postgres_data:
+  pgadmin_data:
 
