--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   discountDb:
     image: postgres
   pgadmin:
-    image: dpage/pgadmin
+    image: dpage/pgadmin4
   portainer:
     image: portainer/portainer-ce
   
@@ -24,9 +24,16 @@ services:
       context: .
       dockerfile: Services/Basket/Basket.API/Dockerfile
 
+  discount.api:
+    image: ${DOCKER_REGISTRY-}discountapi
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.API/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
 
