--- a/src/Services/Discount/Discounts.GRPC/appsettings.json
+++ b/src/Services/Discount/Discounts.GRPC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Username=admin;Password=admin12345;Database=DiscountDb;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
