--- a/src/Services/Discount/Discounts.GRPC/Discounts.GRPC.csproj
+++ b/src/Services/Discount/Discounts.GRPC/Discounts.GRPC.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +17,8 @@
     <PackageReference Include="Grpc.AspNetCore" Version="2.39.0" />
 
 	  <PackageReference Include="Dapper" Version="2.0.90" />
+
+	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
 	  <PackageReference Include="Npgsql" Version="5.0.7" />
   </ItemGroup>
 
