--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -24,11 +24,7 @@ services:
       context: .
       dockerfile: Services/Basket/Basket.API/Dockerfile
 
-  #discount.api:
-  #  image: ${DOCKER_REGISTRY-}discountapi
-  #  build:
-  #    context: .
-  #    dockerfile: Services/Discount/Discount.API/Dockerfile
+  
 
   discounts.api:
     image: ${DOCKER_REGISTRY-}discountsapi
@@ -36,11 +32,18 @@ services:
       context: .
       dockerfile: Services/Discount/Discounts.API/Dockerfile
 
+  discounts.grpc:
+    image: ${DOCKER_REGISTRY-}discountsgrpc
+    build:
+      context: .
+      dockerfile: Services/Discount/Discounts.GRPC/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
 
 
 
