commit for testing

--- a/src/Services/Discount/Discounts.API/appsettings.json
+++ b/src/Services/Discount/Discounts.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Username=admin;Password=admin12345;Database=DiscountDb;"
+    "DefaultConnection": "Host=localhost;Port=5432;Username=minister;Password=admin12345678;Database=DiscountsDatabase_1;"
   },
   "Logging": {
     "LogLevel": {
